# convert-teams-wiki

./: .gitignore  .tagpr  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml  tagpr.yml
src/convert_teams_wiki/: __init__.py  __main__.py
tests/: test_convert_teams_wiki.py
