[project]
name = "convert-teams-wiki"
version = "0.0.1"
description = "Convert a mht file for Microsoft Teams Wiki into markdown format"
authors = [
    { name = "Tsunenobu Kai", email = "kai2nenobu@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.5",
]
readme = "README.md"
requires-python = ">= 3.6"

[project.scripts]
"convert-teams-wiki" = "convert_teams_wiki:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/convert_teams_wiki"]
