[project]
name = "convert-teams-wiki"
version = "0.1.2"
description = "Convert a mht file for Microsoft Teams Wiki into markdown format"
authors = [
    { name = "Tsunenobu Kai", email = "kai2nenobu@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.5",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = ["markdown", "teams", "wiki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/kai2nenobu/convert-teams-wiki"
Repository = "https://github.com/kai2nenobu/convert-teams-wiki"
Issues = "https://github.com/kai2nenobu/convert-teams-wiki/issues"
Changelog = "https://github.com/kai2nenobu/convert-teams-wiki/blob/main/CHANGELOG.md"

[project.scripts]
"convert-teams-wiki" = "convert_teams_wiki:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "tox>=4.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/convert_teams_wiki"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
